[package]
name = "mexc-spot-public"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytes = "1"
futures = "0.3"
ordered-float = "4"
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3"